Creada la Doc para la funcion crear categoria del controlador Categoria
